# Axiovital

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  app.py  booking_schema.sql  build_frontend_output.txt  build_frontend_output_2.txt  build_frontend_output_2_utf8.txt  build_frontend_output_utf8.txt  build_log.txt  cart_integration_build.txt  cart_integration_build_v2.txt  cart_integration_build_v3.txt  clean_build_output.txt  cloudflare_setup_guide.md  consent_schema.sql  customization_build_output.txt  customization_build_output_v2.txt  docker-compose.yml  docker_build_full_log.txt  docker_build_full_log_utf8.txt  docker_build_full_log_utf8_v2.txt  docker_build_full_log_utf8_v3.txt  docker_build_output.txt  docker_build_v4_log.txt  docker_build_v4_log_utf8.txt  docker_build_v5_log_324.txt  docker_build_v5_log_324_utf8.txt  doctor_flow_final_build.txt  doctor_flow_final_build_v2.txt  doctor_flow_fix_build.txt  doctor_redesign_build.txt  final_build_output.txt  forced_rebuild_output.txt  frontend_build_log.txt  frontend_rebuild_log.txt  inference.py  (+19 more)
.github/workflows/: ci.yml  mobile_build.yml
ai_service/: Dockerfile  config.py  main.py
backend/: Dockerfile  auth.py  config.py  database.py  health_passport.py  main.py  models.py  notifications.py  redis_client.py  requirements.txt  storage.py  websocket.py
backend/services/: audit_service.py  blockchain_service.py  encryption_service.py  ipfs_service.py  s3_cache_service.py  search_service.py
frontend/: .metadata  Dockerfile  README.md  analysis.txt  analysis_utf8.txt  build_log.txt  pubspec.yaml
frontend/lib/: about_me_page.dart  access_history_page.dart  account_settings_page.dart  add_member_sheet.dart  address_details_sheet.dart  auth_service.dart  (+122 more)
server/: app.py
supabase/: config.toml
(+75 files in other folders)
